# cheatLock_App

./: .env.example  .gitignore  README.md  cheatlock.apk  docker-compose.yml  model_data_card.md  package-lock.json  package.json  project_report.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/models/: AuditLog.js  IntegrityReview.js  Tenant.js  (+1 more)
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/ai/: mod.rs
desktop/src-tauri/src/audio/: mod.rs
desktop/src-tauri/src/camera/: mod.rs
desktop/src-tauri/src/commands/: mod.rs
desktop/src-tauri/src/network/: mod.rs
desktop/src-tauri/src/screen/: mod.rs
desktop/src-tauri/src/security/: mod.rs
k8s/: cheatlock-deployment.yaml
nginx/: nginx.conf
src/: README.md  server.js
src/middleware/: auth.js  rateLimiter.js
src/models/: Exam.js  ExamSession.js  IntegrityReview.js  ProctoringEvent.js  StudentNotification.js  Submission.js  TeacherClass.js  TeacherCommunity.js  User.js
src/routes/: auth.js  classes.js  community.js  exams.js  proctoring.js  publicApi.js  sessions.js  students.js  submissions.js  teacher.js
src/services/: pdfGenerator.js  s3.js  studentNotifications.js
src/socket/: proctoring.js
web-dashboard/: Dockerfile  nginx.conf  tsconfig.tsbuildinfo
web-dashboard/src/: App.tsx  main.tsx  types.ts
(+102 files in other folders)
