[package]
name = "cheatlock-desktop"
version = "0.1.0"
description = "CheatLock AI-Powered Online Exam Kiosk Client"
authors = ["CheatLock Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

